Add arguments and formatting to messages
This also adds a few missing messages for certain errors, such as
listing other's keys and attempting to take a quantity of keys greater
than the user's current balance.

Also updated to api 12